# the-wild-oasis-leptos

./: Cargo.toml  Makefile.toml  config.toml  index.html
release/: index.html  leptrun-15f8171e4eae6b3b.js  leptrun-15f8171e4eae6b3b_bg.wasm  leptrun-c070f852b499122f.js  leptrun-c070f852b499122f_bg.wasm  tailwind-8381135beaba2e57.css
src/: app.rs  main.rs
src/hooks/: mod.rs  use_create_cabin.rs  use_delete_cabin.rs  use_toast.rs  use_update_setting.rs
src/model/: cabins.rs  mod.rs  setting.rs
src/pages/: account.rs  bookings.rs  cabins.rs  dashboard.rs  login.rs  mod.rs  not_found.rs  settings.rs  users.rs
src/services/: api_cabins.rs  api_setting.rs  helpers.rs  mod.rs  supabase.rs
src/ui/: app_layout.rs  button.rs  cabin_row.rs  cabin_table.rs  confirm_delete.rs  create_cabin_form.rs  file_input.rs  form.rs  form_row.rs  header.rs  heading.rs  input.rs  logo.rs  main_nav.rs  menus.rs  mod.rs  modal.rs  row.rs  sidebar.rs  spinner.rs  table.rs  text_area.rs  toast.rs  update_setting_form.rs
style/: tailwind.css
